--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
     <!-- navigation section -->
-    <nav class="bg-red-500 p-4 rounded-full flex items-center justify-between pr-6 pl-6 mb-15 ml-[190px] mr-16 w-[1440px] h-[120px]">
+    <nav class="bg-red-500 p-4 rounded-full flex items-center justify-between pr-6 pl-6 mb-15 mr-[10px] ml-[180px] w-[1440px] h-[120px]">
 
         <!-- Mobile view: Show Brand name on the left, and menu in a dropdown button -->
         <div class="flex items-center space-x-4 md:hidden">
@@ -196,8 +196,8 @@
                     <br><span style="color: gray;">days</span>
                 </div>
 
-                <div class="mt-1">
-                    :
+                <div class="mt-2">
+                    <img src="Frame.png" alt="">
                 </div>
                 <div class="items-center">
                     <span class="countdown font-bold text-4xl">
@@ -205,8 +205,8 @@
                     </span>
                     <br><span style="color: gray;">hour</span>
                 </div>
-                <div class="mt-1">
-                    :
+                <div class="mt-2">
+                    <img src="Frame.png" alt="">
                 </div>
                 <div class="items-center">
                     <span class="countdown font-bold text-4xl">
@@ -214,8 +214,8 @@
                     </span>
                     <br><span style="color: gray;">min</span>
                 </div>
-                <div class="mt-1">
-                    :
+                <div class="mt-2">
+                    <img src="Frame.png" alt="">
                 </div>
                 <div>
                     <span class="countdown font-bold text-4xl">
