--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
 
 </head>
 
+<!-- gave a border for testing -->
+
 <body>
     <!-- navigation section -->
-    <nav class="bg-red-500 p-4 rounded-full flex items-center justify-between pr-6 pl-6 mb-15 mx-auto w-[1440px] h-[120px] relative">
+    <nav class="bg-red-500 p-4 rounded-full flex items-center justify-between pr-6 pl-6 mb-15 mx-auto w-[1440px] h-[120px] relative border border-red-600">
 
         <!-- Mobile view: Show Brand name on the left, and menu in a dropdown button -->
         <div class="flex items-center space-x-4 md:hidden">
@@ -71,6 +73,14 @@
             </div>
         </div>
     </nav>
+
+    <!-- bonus section here  -->
+    <section>
+
+
+
+
+    </section>
 
 
 
@@ -449,9 +459,15 @@
 
     </section>
 
-    <div style="display: flex; justify-content: center; position: relative;">
-        <button class="btn btn-error text-white  w-[140px] mb-20 text-center mt-16">Shop now</button>
-    </div>
+    <section class="mt-11">
+        <div style="display: flex; justify-content: center;">
+            <button class="btn btn-error text-white  w-[140px] mb-20 text-center mt-16">Shop now</button>
+        </div>
+
+
+    </section>
+
+    
 
 
 
@@ -588,8 +604,10 @@
 
 
 
+
+
     <!-- footer section -->
-    <footer class="w-100% mx-auto mt-32 h-[526px] relative" style="background-color:#121212;">
+    <footer class="w-[1920px]  mt-32 h-[526px] relative" style="background-color:#121212;">
         <!-- row 1 -->
         <div class="flex justify-center gap-3 pt-32">
             <img src="images/logo.png" alt="">
