added bonus section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 
 <body>
     <!-- navigation section -->
-    <nav class="bg-red-500 p-4 rounded-full flex items-center justify-between pr-6 pl-6 mb-15 mx-auto w-[1440px] h-[120px] relative border border-red-600">
+    <nav
+        class="bg-red-500 p-4 rounded-full flex items-center justify-between pr-6 pl-6 mb-15 mx-auto w-[1440px] h-[120px] relative border border-red-600">
 
         <!-- Mobile view: Show Brand name on the left, and menu in a dropdown button -->
         <div class="flex items-center space-x-4 md:hidden">
@@ -75,7 +76,39 @@
     </nav>
 
     <!-- bonus section here  -->
-    <section>
+    <section class="bonus flex justify-between items-center">
+        <div class="flex justify-center items-center gap-5 pt-6 flex-row">
+            <div><img src="images/fruit1.png" alt="">
+                <h1>Mango</h1>
+            </div>
+            <div><img src="images/fruit2.png" alt="">
+                <h1>Mango</h1>
+            </div>
+        </div>
+        <div><img src="images/fruit3.png" alt="">
+            <h1>Banana</h1>
+        </div>
+        </div>
+        <div><img src="images/fruit4.png" alt="">
+            <h1>Orange</h1>
+        </div>
+        </div>
+        <div><img src="images/fruit5.png" alt="">
+            <h1>Litchi</h1>
+        </div>
+        </div>
+        <div><img src="images/fruit6.png" alt="">
+            <h1>Lemon</h1>
+        </div>
+        </div>
+
+
+
+
+
+
+        </div>
+
 
 
 
@@ -91,7 +124,7 @@
 
 
     <!-- start of slider section -->
-    <div class="flex justify-center mt-16 w-[1440px]h-[520px] mx-auto relative">
+    <div class="flex justify-center mt-16 w-[1440px]h-[520px] mx-auto relative slideboy">
         <div class="carousel w-[1420px] h-[520px] mr-6">
             <div id="slide1" class="carousel-item relative w-full">
                 <img src="images/banner1.png" class="w-full" />
@@ -186,10 +219,10 @@
 
 
     <!-- deal of the day section -->
-    <section class="mt-32  flex justify-between w-[1400px] mx-auto relative">
+    <section class="mt-32  flex justify-between w-[1400px] mx-auto relative deal-day">
         <div>
 
-            <h1 class="text-left text-4xl font-bold">Deal of the day</h1>
+            <h1 class="text-left text-4xl font-bold mb-5">Deal of the day</h1>
             <p class="text-gray-600">Check out this crazy deals we are providing for limited time only</p>
 
 
@@ -249,7 +282,7 @@
 
     <!-- card section -->
 
-    <section class="mt-20  flex justify-center gap-20 mb-3 w-[1400px] mx-auto relative">
+    <section class="mt-20  flex justify-center gap-20 mb-3 w-[1400px] mx-auto relative carders">
         <div class="card
          bg-base-100 shadow-xl border border-gray-300 px-2 relative">
             <figure class="px-16 pt-10 mb-0 mt-5">
@@ -459,7 +492,7 @@
 
     </section>
 
-    <section class="mt-11">
+    <section class="mt-11 relative button-shop blaster">
         <div style="display: flex; justify-content: center;">
             <button class="btn btn-error text-white  w-[140px] mb-20 text-center mt-16">Shop now</button>
         </div>
@@ -467,13 +500,13 @@
 
     </section>
 
-    
+
 
 
 
     <!-- meet the team section -->
 
-    <section class="flex justify-center  w-[1400px] mx-auto relative">
+    <section class="flex justify-center  w-[1400px] mx-auto relative teamers bingers">
         <!-- card 1 -->
         <div class="btnd text-center items-center space-y-10">
             <div class="mt-32">
