--- a/index-2.html
+++ b/index-2.html
@@ -289,14 +289,14 @@
           <div class="my-account">My Account</div>
         </div>
       </div>
-      <div class="tableter">
+      <!-- <div class="tableter">
         <img src="icons/apple 1.png" alt="" width="23px" height="23px">
       <img src="icons/facebook 1 (1).png" alt="" width="23px" height="23px">
       <img src="icons/Group 49.png" alt="" width="23px" height="23px">
       <img src="icons/instagram 1.png" alt="" width="23px" height="23px">
       <img src="icons/linkedin 1 (1).png" alt="" width="23px" height="23px">
       <img src="icons/twitter 1.png" alt="" width="23px" height="23px">
-      </div>
+      </div> -->
       
     </div>
     
