--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fruit Blast</title>
+    <link rel="stylesheet" href="global.css">
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="style.css">
+    
+    <link rel="shortcut icon" href="images/fruit2.png" type="image/x-icon">
     <style>
         /* Add some basic styling to make the iframes fill the whole page */
         body, html {
@@ -14,12 +19,13 @@
         }
 
         iframe {
-            width: 100%;
+            width: 400px;
             height: 100%;
             border: none;
+            overflow-x: hidden;
         }
 
-        @media (min-width: 768px) {
+         @media (min-width: 768px) {
             iframe[src="index-1.html"] {
                 display: block;
             }
@@ -40,9 +46,7 @@
             }
         }
     </style>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="global.css">
-    <link rel="stylesheet" href="index.css">
+    
 </head>
 <body>
     <iframe  src="index-1.html"></iframe>
