--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
          @media (min-width: 768px) {
             iframe[src="index-1.html"] {
                 display: block;
+                width:1920px;
             }
 
             iframe[src="index-2.html"] {
@@ -43,6 +44,7 @@
 
             iframe[src="index-2.html"] {
                 display: block;
+                width:400px;
             }
         }
     </style>
