--- a/index-1.html
+++ b/index-1.html
@@ -155,7 +155,7 @@
                     </h1>
                 </span>
                 <span
-                    class="absolute top-1/2 left-1/2 text-6xl font-bold text-white -translate-x-1/2 -translate-y-1/2 sm:text-3xl dark:text-gray-800 text-center "><button
+                    class=" timbu absolute top-1/2 left-1/2 text-6xl font-bold text-white -translate-x-1/2 -translate-y-1/2 sm:text-3xl dark:text-gray-800 text-center "><button
                         class="btn btn-error text-white  w-[140px] mb-20">Buy now</button></span>
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                     <a href="#slide1" class="btn btn-circle">❮</a>
