--- a/index-2.html
+++ b/index-2.html
@@ -9,6 +9,15 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:wght@400;500;700;800&display=swap" />
   <link href="https://cdn.jsdelivr.net/npm/daisyui@3.4.0/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+
+    <style>
+        body {
+            font-family: 'Lato', sans-serif;
+        }
+    </style>
 </head>
 
 <body>
@@ -39,7 +48,7 @@
 
     <img class="group-icon" alt="" src="Frame (1).png" /> -->
 
-    <div class="flex justify-center lg:mt-16 w-[430px] h-[280px] lg:w-[1440px] lg:h-[520px] mx-auto relative slideboy ">
+    <div class="flex devil justify-center lg:mt-16 w-[430px] h-[280px] lg:w-[1440px] lg:h-[520px] mx-auto relative slideboy ">
       <div class="carousel lg:w-[1420px] lg:h-[520px] w-[335px] h-[190px] mr-6 mt-28">
           <div id="slide1" class="carousel-item relative w-full">
               <img src="images/banner1.png" class="w-full" />
@@ -56,7 +65,7 @@
                       now</button></span>
 
 
-              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+              <div class="absolute dd flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                   <a href="#slide4" class="btn btn-circle">❮</a>
                   <a href="#slide2" class="btn btn-circle">❯</a>
               </div>
