--- a/index-2.html
+++ b/index-2.html
@@ -168,8 +168,39 @@
         <div class="parent2">
           <b class="b">12.90$ - 18.85$</b>
           <div class="details-parent">
-            <b class="details">Details</b>
-            <div class="apples">Apples</div>
+            <!-- <b class="details">Details</b> -->
+            <!-- Open the modal using ID.showModal() method -->
+            <button class="btn btn-ghost text-red-600 font-bold mt-20" onclick="my_modal_1.showModal()">Details</button>
+            <dialog id="my_modal_1" class="modal space-y-5">
+                <form method="dialog" class="modal-box text-center ">
+                    <div class="flex justify-center items-center text-center">
+                        <div>
+                            <img src="images/fruit1.png" alt="">
+                            <h2 class="text-2xl font-semibold">Grapes</h2>
+
+                        </div>
+
+                    </div>
+
+
+                    <p class="text-gray-600">Grapes is a delicious fruit</p>
+                    <div class="rating mt-5">
+                        <!-- <input type="radio" name="rating-2" class="mask mask-star-2 bg-red-500" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-red-500" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-red-500" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-red-500" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-red-500" /> -->
+                        <img src="Group 24.png" alt="">
+                    </div>
+
+                    <div class="modal-action flex justify-center gap-2">
+                        <button class="btn btn-error text-white ">View details</button>
+                        <!-- if there is a button in form, it will close the modal -->
+                        <button class="btn btn-error btn-outline">Close</button>
+                    </div>
+                </form>
+            </dialog>
+            <div class="apples">Grapes</div>
             <img class="group-inner" alt="" src="Group 24.png" />
           </div>
           <div class="line-div"></div>
@@ -185,7 +216,39 @@
         <div class="parent2">
           <b class="b">12.90$ - 18.85$</b>
           <div class="details-parent">
-            <b class="details">Details</b>
+            <!-- <button class="details">Details</button> -->
+            <!-- Open the modal using ID.showModal() method -->
+            <button class="btn btn-ghost text-red-600 font-bold mt-20" onclick="my_modal_2.showModal()">Details</button>
+            <dialog id="my_modal_2" class="modal space-y-5">
+                <form method="dialog" class="modal-box text-center ">
+                    <div class="flex justify-center items-center text-center">
+                        <div>
+                            <img src="images/fruit2.png" alt="">
+                            <h2 class="text-2xl font-semibold">Orange</h2>
+
+                        </div>
+
+                    </div>
+
+
+                    <p class="text-gray-600">Orange is a delicious fruit</p>
+                    <div class="rating mt-5">
+                        <!-- <input type="radio" name="rating-2" class="mask mask-star-2 bg-red-500" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-red-500" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-red-500" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-red-500" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-red-500" /> -->
+                        <img src="Group 24.png" alt="">
+
+                    </div>
+
+                    <div class="modal-action flex justify-center gap-2">
+                        <button class="btn btn-error text-white ">View details</button>
+                        <!-- if there is a button in form, it will close the modal -->
+                        <button class="btn btn-error btn-outline">Close</button>
+                    </div>
+                </form>
+            </dialog>
             <div class="orange">Orange</div>
             <img class="group-inner" alt="" src="Group 24.png" />
           </div>
@@ -201,7 +264,39 @@
         <div class="parent2">
           <b class="b">12.90$ - 18.85$</b>
           <div class="details-parent">
-            <b class="details">Details</b>
+            <!-- <b class="details">Details</b> -->
+            <!-- Open the modal using ID.showModal() method -->
+            <button class="btn btn-ghost text-red-600 font-bold mt-20" onclick="my_modal_3.showModal()">Details</button>
+            <dialog id="my_modal_3" class="modal space-y-5">
+                <form method="dialog" class="modal-box text-center ">
+                    <div class="flex justify-center items-center text-center">
+                        <div>
+                            <img src="images/fruit3.png" alt="">
+                            <h2 class="text-2xl font-semibold">Red Dragon</h2>
+
+                        </div>
+
+                    </div>
+
+
+                    <p class="text-gray-600">Red Dragon is a delicious fruit</p>
+                    <div class="rating mt-5">
+                        <!-- <input type="radio" name="rating-2" class="mask mask-star-2 bg-red-500" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-red-500" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-red-500" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-red-500" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-red-500" /> -->
+                        <img src="Group 24.png" alt="">
+
+                    </div>
+
+                    <div class="modal-action flex justify-center gap-2">
+                        <button class="btn btn-error text-white ">View details</button>
+                        <!-- if there is a button in form, it will close the modal -->
+                        <button class="btn btn-error btn-outline">Close</button>
+                    </div>
+                </form>
+            </dialog>
             <div class="red-dragon">Red Dragon</div>
             <img class="group-inner" alt="" src="Group 24.png" />
           </div>
@@ -218,7 +313,39 @@
         <div class="parent2">
           <b class="b">12.90$ - 18.85$</b>
           <div class="details-parent">
-            <b class="details">Details</b>
+            <!-- <b class="details">Details</b> -->
+            <!-- Open the modal using ID.showModal() method -->
+            <button class="btn btn-ghost text-red-600 font-bold mt-20" onclick="my_modal_4.showModal()">Details</button>
+            <dialog id="my_modal_4" class="modal space-y-5">
+                <form method="dialog" class="modal-box text-center ">
+                    <div class="flex justify-center items-center text-center">
+                        <div>
+                            <img src="images/fruit4.png" alt="">
+                            <h2 class="text-2xl font-semibold">Banana</h2>
+
+                        </div>
+
+                    </div>
+
+
+                    <p class="text-gray-600">Banana is a delicious fruit</p>
+                    <div class="rating mt-5">
+                        <!-- <input type="radio" name="rating-2" class="mask mask-star-2 bg-red-500" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-red-500" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-red-500" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-red-500" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-red-500" /> -->
+                        <img src="Group 24.png" alt="">
+
+                    </div>
+
+                    <div class="modal-action flex justify-center gap-2">
+                        <button class="btn btn-error text-white ">View details</button>
+                        <!-- if there is a button in form, it will close the modal -->
+                        <button class="btn btn-error btn-outline">Close</button>
+                    </div>
+                </form>
+            </dialog>
             <div class="orange">Banana</div>
             <img class="group-inner" alt="" src="Group 24.png" width="141px" height="60px" />
           </div>
