--- a/index-1.html
+++ b/index-1.html
@@ -660,7 +660,7 @@
                         <div class="text-xl font-bold mb-3">Dedicated Team</div>
 
                         <!-- Horizontal line -->
-                        <div class="flex lg:justify-start justify-center ">
+                        <div class="flex tnd lg:justify-start justify-center ">
                             <div class="w-1/2 h-px bg-black"></div>
                         </div>
 
