--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         iframe {
             width: 400px;
-            height: 100%;
+            height: 836px;
             border: none;
             overflow-x: hidden;
         }
@@ -28,7 +28,8 @@
          @media (min-width: 768px) {
             iframe[src="index-1.html"] {
                 display: block;
-                width:1920px;
+                width:100%;
+                overflow-x:hidden;
             }
 
             iframe[src="index-2.html"] {
@@ -45,6 +46,8 @@
             iframe[src="index-2.html"] {
                 display: block;
                 width:400px;
+                height:836px;
+                overflow-x:hidden;
             }
         }
     </style>
