--- a/index-2.html
+++ b/index-2.html
@@ -16,6 +16,7 @@
     <style>
         body {
             font-family: 'Lato', sans-serif;
+            overflow-x: hidden;
         }
     </style>
 </head>
